--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,21 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ext-intl": "*",
+        "barryvdh/laravel-dompdf": "^1.0",
+        "calcinai/php-imagick": "^0.1.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "simplesoftwareio/simple-qrcode": "~4",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
