--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "simplesoftwareio/simple-qrcode": "~4",
-        "spatie/laravel-permission": "^5.5"
-    },
-    "require-dev": {
+        "spatie/laravel-permission": "^5.5",
         "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
@@ -27,6 +25,9 @@
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0"
+    },
+    "require-dev": {
+
     },
     "autoload": {
         "psr-4": {
